log
Thu Mar 26 07:02:32 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
9bec876
Thu Mar 26 07:16:42 PM UTC 2026: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:97:10: error: variable or field ‘dato’ declared void
   97 |     void dato = list->current->data;
      |          ^~~~
list.c:97:17: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   97 |     void dato = list->current->data;
      |                 ^~~~
list.c:102:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Wint-conversion]
  102 |     return dato;
      |            ^~~~
eef980d
Thu Mar 26 07:18:43 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:97:11: error: expected identifier or ‘(’ before ‘=’ token
   97 |     void* = list->current->data;
      |           ^
list.c:102:12: error: ‘dato’ undeclared (first use in this function)
  102 |     return dato;
      |            ^~~~
list.c:102:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
  103 | }
      | ^
cc1: all warnings being treated as errors
360c335
Thu Mar 26 07:18:52 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
f76b420
Thu Mar 26 07:21:15 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/60
80e12da
Thu Mar 26 07:31:42 PM UTC 2026: 
 list.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
8daa0fb
Thu Mar 26 07:34:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
1bcf69c
Thu Mar 26 07:36:57 PM UTC 2026: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  1|5
total_score: 10/60
537c6c0
Thu Mar 26 07:37:52 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
664b001
Thu Mar 26 07:39:02 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
1822848
Thu Mar 26 07:40:20 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
a1f4afe
Thu Mar 26 07:42:53 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
dd58f18
Thu Mar 26 07:45:52 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
bd50fba
Thu Mar 26 07:50:23 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 20/60
2bce8a0
Thu Mar 26 07:52:45 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
552a777
Thu Mar 26 07:55:08 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:28: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   48 |     if(list->head == NULL) return;
      |                            ^~~~~~
list.c:47:8: note: declared here
   47 | void * firstList(List * list) {
      |        ^~~~~~~~~
c9d2772
Thu Mar 26 07:55:29 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
db0e336
Thu Mar 26 07:57:04 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   56 |     void* dato = list->current->next->data;
      |           ^~~~
cc1: all warnings being treated as errors
5413bb4
Thu Mar 26 07:57:13 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
746806e
Thu Mar 26 07:57:36 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d8af35f
Thu Mar 26 07:58:27 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b58e9a
Thu Mar 26 07:59:05 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3a3fa63
Thu Mar 26 08:00:09 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
1f1d553
Thu Mar 26 08:01:20 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
10d4b55
Thu Mar 26 08:03:19 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
1ce55f1
Thu Mar 26 08:05:46 PM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:77:12: error: unused variable ‘dato’ [-Werror=unused-variable]
   77 |     void * dato = list->current->prev->data;
      |            ^~~~
cc1: all warnings being treated as errors
93918e5
